Fix mobile issues

--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
               <li class="dropdown-toggle nav-toggle"><a href="#establishment" class="" title="Establishment" name="establishment">Establishment</a></li>
               <li class="dropdown-toggle nav-toggle"><a href="#growth" class="" title="Growth" name="growth">Growth</a></li>
               <li class="dropdown-toggle nav-toggle"><a href="#legacy" class="" title="Legacy" name="legacy">Legacy</a></li>
-              <li class="dropdown-toggle nav-toggle"><a href="#resources" class="" title="Resources" name="resources">Resources</a></li>
+              <li class="dropdown-toggle nav-toggle"><a href="#video" class="" title="How to browse records" name="video">How to browse records</a></li>
+              <li class="dropdown-toggle nav-toggle"><a href="#relresources" class="" title="Related Resources" name="relresources">Related Resources</a></li>
+              <!--<li class="dropdown-toggle nav-toggle"><a href="#resources" class="" title="Resources" name="resources">Resources</a></li>-->
             </ul>
             <!-- End Nav List -->
           </div>
@@ -89,8 +91,8 @@
           <!-- Image -->
           <div class="image-container relative">
             <!-- Hero Images -->
-            <div class="bg-image banner--image-start" style="background: url(images/arch_main1.jpg) no-repeat; background-size: cover; background-position: center center;"></div>
-            <div class="bg-image banner--image-end" style="background: url(images/arch_main2.jpg) no-repeat; background-size: cover; background-position: center center;"></div>
+              <div class="bg-image banner--image-start" style="background: url(images/arch_main1.jpg) no-repeat; background-size: cover; background-position: center center;"></div>
+              <div class="bg-image banner--image-end" style="background: url(images/arch_main2.jpg) no-repeat; background-size: cover; background-position: center center;"></div>
             <!-- End Hero Images -->
           </div>
           <!-- End Image -->
@@ -2048,51 +2050,55 @@
 
     <!-- Video Section -->
     <section id="video" class="container">
-      <h1 class="header section-title">HOW TO BROWSE PARISH IMAGES</h1>
-      <div class="row">
-        <div class="col-xs-12 col-md-4 col-md-push-8">
-          <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vwHfGokz8PQ" frameborder="0" allowfullscreen></iframe>
+      <div class="inner clearfix">
+        <h1 class="header section-title">HOW TO BROWSE PARISH IMAGES</h1>
+        <div class="row">
+          <div class="col-xs-12 col-md-4 col-md-push-8">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vwHfGokz8PQ" frameborder="0" allowfullscreen></iframe>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-8 col-md-pull-4">
+            <p>The Catholic Archdiocese of Boston and NEHGS have partnered to create a searchable database of sacramental records from one hundred and fifty Boston-area parishes, dating between 1789 and 1900. The project will take several years to complete. However, while our transcribers work to create a name-searchable database, scanned images of parish records are available now in a browsable format for members and guest members alike. Additional parish records will be added as the volumes are scanned. To find out more about browsing parish images, watch this video.</p>
           </div>
         </div>
-        <div class="col-xs-12 col-md-8 col-md-pull-4">
-        <p>The Catholic Archdiocese of Boston and NEHGS have partnered to create a searchable database of sacramental records from one hundred and fifty Boston-area parishes, dating between 1789 and 1900. The project will take several years to complete. However, while our transcribers work to create a name-searchable database, scanned images of parish records are available now in a browsable format for members and guest members alike. Additional parish records will be added as the volumes are scanned. To find out more about browsing parish images, watch this video.</p>
-        </div>
       </div>
-      <div class="seperator"></div>
+       <div class="seperator"></div>
     </section>
     <!-- End Video -->
 
     <!-- Related Resources Section -->
     <section id="relresources" class="container">
-      <h1 class="header section-title">RELATED RESOURCES</h1>
-      <div class="row">
-        <div class="col-md-3 col-xs-6">
-          <a href="#">
+      <div class="inner clearfix">
+        <h1 class="header section-title">RELATED RESOURCES</h1>
+        <div class="row">
+          <div class="col-md-3 col-xs-6">
+            <a href="#">
               <div class="imgWrap"><img class="rel-image" src="images/databases.jpg" alt=""></div>
-            <p class="rel-caption">Search more than a billion names</p>
-          </a>
-        </div>
-        <div class="col-md-3 col-xs-6">
-          <a href="#">
+              <p class="rel-caption">Search more than a billion names</p>
+            </a>
+          </div>
+          <div class="col-md-3 col-xs-6">
+            <a href="#">
               <div class="imgWrap"><img class="rel-image" src="images/education.jpg" alt=""></div>
-            <p class="rel-caption">Access free materials on family history</p>
-          </a>
-        </div>
-        <div class="col-md-3 col-xs-6">
-          <a href="#">
+              <p class="rel-caption">Access free materials on family history</p>
+            </a>
+          </div>
+          <div class="col-md-3 col-xs-6">
+            <a href="#">
               <div class="imgWrap"><img class="rel-image" src="images/publications.jpg" alt=""></div>
-            <p class="rel-caption">Find books on genealogy topics</p>
-          </a>
-        </div>
-        <div class="col-md-3 col-xs-6">
-          <a href="#">
+              <p class="rel-caption">Find books on genealogy topics</p>
+            </a>
+          </div>
+          <div class="col-md-3 col-xs-6">
+            <a href="#">
               <div class="imgWrap"><img class="rel-image" src="images/researchservices.jpg" alt=""></div>
-            <p class="rel-caption">Hire or consult expert genealogists</p>
-          </a>
+              <p class="rel-caption">Hire or consult expert genealogists</p>
+            </a>
+          </div>
         </div>
       </div>
-    <div class="seperator"></div>
+      <div class="seperator"></div>
     </section>
     <!-- End Related Resources -->
 
