--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@
             <!--- Timeline content 3 start -->
             <div id="parish_1800_1809" class="tm-content-row content-popup-wrapper">
               <a href="#" alt="Timeline-content" data-toggle="modal" data-target="#tm-Modal3">
-                <img src="images/timeline-images/1800_StateSt_byJamesBrownMarston.png" alt="An 1801 painting of State Street by James Brown Marston." />
+                <img src="images/timeline-images/1800_StateSt_byJamesBrownMarston.jpg" alt="An 1801 painting of State Street by James Brown Marston." />
                 <div class="button-container">
                   <button class="slideshow-btn btn site-button">
                     <i class="fa fa-clone btn-icon" aria-hidden="true"></i>
@@ -962,7 +962,7 @@
                             <!-- Wrapper for slides -->
                             <div class="carousel-inner" role="listbox">
                               <div class="item active">
-                                <img src="images/timeline-images/1800_StateSt_byJamesBrownMarston.png" alt="An 1801 painting of State Street by James Brown Marston."/>
+                                <img src="images/timeline-images/1800_StateSt_byJamesBrownMarston.jpg" alt="An 1801 painting of State Street by James Brown Marston."/>
                                 <!-- commented out for lack of second image for this section, add back in if find another one
                                 </div>
                                 <div class="item">
