Updated modal for Saint Bridge

--- a/index.html
+++ b/index.html
@@ -159,14 +159,18 @@
               <div class="modal-content">
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal">&times;</button>
+                  <h5>About Saint Brigid</h5>
                 </div>
                 <div class="modal-body">
-                  <span class="floated-box-img large-img">
+                  <!--<span class="floated-box-img large-img">
                     <img src="images/project-saint-icon.jpg" alt="Resources and Further Discovery"/>
-                  </span>
-                  <span class="image-caption-content t-center"><i>Saint Brigid of Ireland</i><br />
+                  </span>-->
+                  <p>The image featured in our project logo is taken from a stained-glass window in Boston’s Cathedral of the Holy Cross, which was completed in 1875. St. Brigid of Ireland (or St. Brigid of Kildare) held particular meaning for the Catholics of Boston in the 19th century as such a large number of them were of Irish descent and placed great value on maintaining a strong connection to their heritage.</p>
+                  <p>In addition to being regarded as the Patroness of Ireland, St. Brigid (b. 451 or 452, d. 1 Feb. 525) is considered a patroness of students and is said to have helped begin the monastic movement in Ireland. Her abbey at Kildare (or Cill Dara, meaning church of the oak) became a major center of religion and learning, and it developed into a cathedral city. St. Brigid is sometimes pictured with a book, which probably refers to the Rule she authored for her religious order.  It is also evocative of her association with learning and the illuminated manuscripts which were produced at Kildare, including the now-lost Book of Kildare.</p>
+                  <p>St. Brigid is often pictured with a candle as she is associated with light or flame. There are various explanations for this. It may simply refer to enlightenment and learning, with which she is so strongly connected. The “Saint Brigid Hearth Keeper Prayer” asks her to “kindle us” and help her followers to “keep it bright, preserve the flame.” Some say “her birth and consecration as a nun were attended by miraculous manifestations of fire.” In Irish mythology, Brigid was the name of the goddess of fire.</p>
+                  <!--<span class="image-caption-content t-center"><i>Saint Brigid of Ireland</i><br />
 
-                    NEHGS and the Archdiocese of Boston are partnering to make Catholic records available online. <a href="https://www.americanancestors.org/databases/massachusetts-image-only-roman-catholic-archdiocese-of-boston-records-1789-1900/image/?volumeId=42946">Browse parish records</a>.</span>
+                    NEHGS and the Archdiocese of Boston are partnering to make Catholic records available online. <a href="https://www.americanancestors.org/databases/massachusetts-image-only-roman-catholic-archdiocese-of-boston-records-1789-1900/image/?volumeId=42946">Browse parish records</a>.</span>-->
                 </div>
               </div>
 
