Make latest text edits
Thomas Lester's edits and also new text for Paper to Pixels slideshow

--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
         <div id="slideshow-block" class="content-popup row volume-database">
           <h3 class="t-center uppercase">From Paper to Pixels</h3>
           <div class="col-lg-6 col-sm-6 col-md-6 slideshow-block-content">
-            <p>The Catholic Archdiocese of Boston and NEHGS have partnered to create a searchable database of sacramental records from one hundred and fifty Boston-area parishes, dating between 1789 and 1900. The project will take several years to complete. However, while our transcribers work to create a name-searchable database, scanned images of parish records are available now in a browsable format for members and guest members alike. Additional parish records will be added as the volumes are scanned. Fully searchable records will be added as the transcriptions are completed. </p>
+            <p>937 bound volumes. 400,000 hand-written pages. 10 million names. How does NEHGS turn all that paper-based information into a searchable online database?  We work closely with the Archdiocese and our own scholars to conserve damaged volumes, evaluate records, decipher obscure entries, and carefully guide our transcriptionists so their work is as accurate as possible. This painstaking process ensures faithful transcriptions–a critical factor for family historians and researchers.</p>
           </div>
 
           <div class="col-lg-6 col-sm-6 col-md-6 slider-column">
@@ -1703,7 +1703,7 @@
           <span class="image-caption-content t-center">The original Holy Cross Church on Franklin Street in Boston.</span>
         </div>
         <p>Father Francis Anthony Matignon was a refugee of France's own Revolution, but when he came to New England in 1792, he became an essential figure in Boston's Catholic community. His work in Boston was that of a missionary. He was sent there at the request of Baltimore's Bishop Carroll, in the hopes that his influence could help settle cultural differences between Boston's Catholics and create a unified congregation.</p>
-        <p>Joined by Father John Cheverus, Matignon held religious services for the community in a former French Huguenot church on School Street. Then, in 1803, he oversaw the building of the first Holy Cross Church, which was funded in large part by donations from non-Catholic Bostonians, including U.S. President John Adams. By 1808, the Holy Cross Church was elevated to the rank of Cathedral, and the Diocese of Boston was born with Cheverus as its Bishop. The community was still relatively small at this time, but soon other churches began to pop up.</p>
+        <p>Joined by Father John Cheverus, Matignon held religious services for the community in a former French Huguenot church on School Street. Then, in 1803, he oversaw the completion of the first Holy Cross Church, which was funded in large part by donations from non-Catholic Bostonians, including U.S. President John Adams. In 1808, the Holy Cross Church was elevated to the rank of Cathedral when the Diocese of Boston was founded with Cheverus as its Bishop. The community was still relatively small at this time, but soon other churches began to pop up.</p>
         <div class="floated-box f-left">
           <a href="#" data-toggle="modal" data-target="#establishment-floated-bx-modal2">
             <span class="floated-box-img thumb">
