Update slideshow intro
Paper to Pixels

--- a/index.html
+++ b/index.html
@@ -553,7 +553,9 @@
         <div id="slideshow-block" class="content-popup row volume-database">
           <h3 class="t-center uppercase">From Paper to Pixels</h3>
           <div class="col-lg-6 col-sm-6 col-md-6 slideshow-block-content">
-            <p>937 bound volumes. 400,000 hand-written pages. 10 million names. How does NEHGS turn all that paper-based information into a searchable online database?  We work closely with the Archdiocese and our own scholars to conserve damaged volumes, evaluate records, decipher obscure entries, and carefully guide our transcriptionists so their work is as accurate as possible. This painstaking process ensures faithful transcriptions–a critical factor for family historians and researchers.</p>
+            <p>937 bound volumes. 400,000 hand-written pages. 10 million names. How does NEHGS turn all that paper-based information into a searchable online database?  We work closely with the Archdiocese and our own scholars to conserve any damaged volumes, evaluate records, decipher obscure entries, and carefully guide our transcriptionists so their work is as accurate as possible. This painstaking process ensures faithful transcriptions&mdash;a critical factor for family historians and researchers.</p>
+            <p>View the slideshow for a close-up look at how NEHGS is working to create an online database from the parish volumes. Though the fully searchable data will not be available immediately, anyone can browse images of parish records as they are completed. Discover <a href="#video" class="" title="How to browse records" name="video">how to browse records</a>.
+            </p>
           </div>
 
           <div class="col-lg-6 col-sm-6 col-md-6 slider-column">
