Replace intro for How to Browse

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             </div>
           </div>
           <!-- END Modal -->
-          <span class="image-caption-content t-center"><p><i>Saint Brigid of Ireland</i></p>NEHGS and the Archdiocese of Boston are partnering to make Catholic records available online.<br /><a href="https://www.americanancestors.org/databases/massachusetts-image-only-roman-catholic-archdiocese-of-boston-records-1789-1900/image/?volumeId=42946">Browse parish records</a>.</span>
+          <span class="image-caption-content t-center"><p><i>Saint Brigid of Ireland</i></p>NEHGS and the Archdiocese of Boston are partnering to make Catholic records available online.<br /><a href="#video" class="" title="How to browse records" name="video">How to browse records</a>.</span>
         </div>
         <p>
           Carroll was only too happy to give Cheverus a mission:  minister to the people, unite the scattered faithful and help the church in Boston take root.
@@ -2074,7 +2074,7 @@
     <!-- Video Section -->
     <section id="video" class="container">
       <div class="inner clearfix">
-        <h1 class="header section-title">HOW TO BROWSE PARISH IMAGES</h1>
+        <h1 class="header section-title">HOW TO BROWSE PARISH RECORDS</h1>
         <div class="row">
           <div class="col-xs-12 col-md-4 col-md-push-8">
             <div class="embed-responsive embed-responsive-16by9">
@@ -2082,7 +2082,8 @@
             </div>
           </div>
           <div class="col-xs-12 col-md-8 col-md-pull-4">
-            <p>The Catholic Archdiocese of Boston and NEHGS have partnered to create a searchable database of sacramental records from one hundred and fifty Boston-area parishes, dating between 1789 and 1900. The project will take several years to complete. However, while our transcribers work to create a name-searchable database, scanned images of parish records are available now in a browsable format for members and guest members alike. Additional parish records will be added as the volumes are scanned. To find out more about browsing parish images, watch this video.</p>
+            <p>Images of Boston's oldest parish records, including those from Holy Cross Cathedral and Holy Trinity, are available immediately to browse, which means you can view the records online but can't yet search records by name (searchable records will be available at a later date). However, if you know the parish and rough years of the name you are looking for, you may be able to find it using our index. Locating records in this unique collection varies slightly from volume to volume and parish to parish. The “Index” at the beginning of each volume can help a researcher know where to start to find a name in the volume. Additional parishes will be made available as we complete them.</p>
+            <p>Please watch this short video to learn how to browse parish records on our website. Please note that to browse records, a FREE sign up is required.</p>
           </div>
         </div>
       </div>
