--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
                             <img src="images/slider-images/volumeslideshow2.jpg" alt="Old Volumes">
                               <div class="carousel-caption">
                                 <h4>Handle with care</h4>
-                                <p>Several of the volumes are crumbling with age and require special handling.</p>
+                                <p>Many of the volumes are crumbling with age and require special handling as they are scanned.</p>
                               </div>
                           </div>
 
@@ -604,7 +604,7 @@
                             <img src="images/slider-images/volumeslideshow3.jpg" alt="Reviewing Volumes">
                               <div class="carousel-caption">
                                 <h4>Evaluating the state of the volumes</h4>
-                                <p>Our experts examine the volumes to determine whether they’re in condition to be scanned. </p>
+                                <p>Our experts examine the volumes to determine whether they’re in condition to be scanned or if there are any quirks that need to be accounted for such as inserted pages, mis-numbered pages, or pages with no numbers at all.</p>
                               </div>
                           </div>
 
@@ -633,31 +633,52 @@
                           </div>
 
                           <div class="item">
+                            <img src="images/slider-images/volumeslideshow10.jpg" alt="Lowell Bott Mill">
+                              <div class="carousel-caption">
+                                <h4>Time to scan</h4>
+                                <p>The database team trains our volunteer family historians in the gentle art of scanning delicate books. After each volume is scanned, our staff uses software to straighten and crop the archival-quality images.</p>
+                              </div>
+                          </div>
+
+                          <div class="item">
                             <img src="images/slider-images/volumeslideshow7.jpg" alt="Acid Free Box">
                               <div class="carousel-caption">
                                 <h4>Return to sender</h4>
-                                <p>Once treated, the leaves are carefully gathered together and placed in a custom-made, labeled, acid-free box. They are then scanned and returned to the Archdiocese.</p>
+                                <p>Once scanned, the leaves of any disassembled books are carefully placed in a custom-made, labeled, acid-free box and returned to the Archdiocese along with any other scanned volumes which did not need special treatment.</p>
                               </div>
                           </div>
 
-
                           <div class="item">
-                            <img src="images/slider-images/volumeslideshow10.jpg" alt="Lowell Bott Mill">
+                            <img src="images/slider-images/harddrive.jpg" alt="Hard Drive">
                               <div class="carousel-caption">
-                                <h4>Straighten it out</h4>
-                                <p>The database team trains our volunteer family historians in the gentle art of scanning delicate books. After each page is scanned, volunteers use software to straighten and crop the images.</p>
+                                <h4>Digital Exchange</h4>
+                                <p>Once the images have been straightened and cropped, they are copied onto an external hard drive to be given to the Archdiocese and stored in their archives.</p>
                               </div>
-                          </div>
-
-
+                          </div>                          
 
                           <div class="item">
-                            <img src="images/slider-images/volumeslideshow11.jpg" alt="Lowell Bott Mill">
+                            <img src="images/slider-images/databaseimage.jpg" alt="First page of new database">
                               <div class="carousel-caption">
                                 <h4>Browsable records</h4>
-                                <p>Images are uploaded to our website, and our members can begin browsing parish data.</p>
+                                <p>Images are uploaded to our website, and our members can begin browsing parish data. Pages named “Index” at the beginning of each volume provide instructions for the best way to locate records in each volume.</p>
                               </div>
                           </div>
+
+                          <div class="item">
+                            <img src="images/slider-images/directions.jpg" alt="Volunteer looking at directions">
+                              <div class="carousel-caption">
+                                <h4>Future Goals</h4>
+                                <p>The next stage of this project is to create a fully searchable database available to members.  Working towards this goal, volunteers are given detailed instructions on interpreting the handwritten records.</p>
+                              </div>
+                          </div>
+
+                          <div class="item">
+                            <img src="images/slider-images/transcribing.jpg" alt="Volunteer transcribing scanned records">
+                              <div class="carousel-caption">
+                                <h4>Make it searchable</h4>
+                                <p>Volunteers carefully read each record and transcribe first name, last name, parents’ and witnesses’ names, full date, record type, and location into a spreadsheet which will ultimately be used to create the searchable database.   </p>
+                              </div>
+                          </div>                                                    
 
                           <!-- Indicators -->
                           <ol class="carousel-indicators">
@@ -670,6 +691,9 @@
                             <li data-target="#myCarousel" data-slide-to="6"></li>
                             <li data-target="#myCarousel" data-slide-to="7"></li>
                             <li data-target="#myCarousel" data-slide-to="8"></li>
+                            <li data-target="#myCarousel" data-slide-to="9"></li>
+                            <li data-target="#myCarousel" data-slide-to="10"></li>
+                            <li data-target="#myCarousel" data-slide-to="11"></li>
                           </ol>
 
                           <div id="slider-controls-wrapper">
