--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
                                 <h4>Digital Exchange</h4>
                                 <p>Once the images have been straightened and cropped, they are copied onto an external hard drive to be given to the Archdiocese and stored in their archives.</p>
                               </div>
-                          </div>                          
+                          </div>
 
                           <div class="item">
                             <img src="images/slider-images/databaseimage.jpg" alt="First page of new database">
@@ -678,7 +678,7 @@
                                 <h4>Make it searchable</h4>
                                 <p>Volunteers carefully read each record and transcribe first name, last name, parents’ and witnesses’ names, full date, record type, and location into a spreadsheet which will ultimately be used to create the searchable database.   </p>
                               </div>
-                          </div>                                                    
+                          </div>
 
                           <!-- Indicators -->
                           <ol class="carousel-indicators">
@@ -2107,7 +2107,7 @@
           </div>
           <div class="col-xs-12 col-md-8 col-md-pull-4">
             <p>Images of Boston's oldest parish records, including those from Holy Cross Cathedral and Holy Trinity, are available immediately to browse, which means you can view the records online but can't yet search records by name (searchable records will be available at a later date). However, if you know the parish and rough years of the name you are looking for, you may be able to find it using our index. Locating records in this unique collection varies slightly from volume to volume and parish to parish. The “Index” at the beginning of each volume can help a researcher know where to start to find a name in the volume. Additional parishes will be made available as we complete them.</p>
-            <p>Please watch this short video to learn how to browse parish records on our website. Please note that to browse records, a FREE sign up is required.</p>
+            <p>Please watch this short video to learn how to browse parish records on our website. Please note that to browse records, a <a href="https://www.americanancestors.org/historic-catholic-records-online">FREE Guest Member sign up on AmericanAncestors.org is required.</a></p>
           </div>
         </div>
       </div>
