Updated Witchcraft image and reference in HTML

--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@
         <div class="floated-box f-right">
           <a href="#" data-toggle="modal" data-target="#catholic-bay-floated-bx-modal2">
             <span class="floated-box-img thumb">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Witchcraft_at_Salem_Village.jpg" alt="Salem Witch Trials"/>
+              <img src="images/Witchcraft_at_Salem_Village.jpg" alt="Salem Witch Trials"/>
             </span>
           </a>
           <!-- Modal -->
@@ -800,7 +800,7 @@
                 </div>
                 <div class="modal-body">
                   <span class="floated-box-img large-img">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Witchcraft_at_Salem_Village.jpg" alt="Salem Witch Trials"/>
+                    <img src="images/Witchcraft_at_Salem_Village.jpg" alt="Salem Witch Trials"/>
                   </span>
                   <span class="image-caption-content t-center">This 1876 illustration depicts the infamous Salem Witch Trials. Anne Glover was the last person to be hanged in Boston as a witch in 1688.</span>
                 </div>
