Fixed third-party image used in HTML

--- a/index.html
+++ b/index.html
@@ -1735,7 +1735,7 @@
         <div class="floated-box f-left">
           <a href="#" data-toggle="modal" data-target="#establishment-floated-bx-modal2">
             <span class="floated-box-img thumb">
-              <img src="https://www.lib.utexas.edu/maps/historical/ireland_1808.jpg" alt="Historic Ireland"/>
+              <img src="images/ireland_1808.jpg" alt="Historic Ireland"/>
             </span>
           </a>
           <!-- Modal -->
@@ -1749,7 +1749,7 @@
                 </div>
                 <div class="modal-body">
                   <span class="floated-box-img large-img">
-                    <img src="https://www.lib.utexas.edu/maps/historical/ireland_1808.jpg" alt="Historic Ireland"/>
+                    <img src="images/ireland_1808.jpg" alt="Historic Ireland"/>
                   </span>
                   <span class="image-caption-content t-center">Irish ancestry? <a href="https://www.americanancestors.org/education/learning-resources/read/irish-guide" target="new">Learn more about Irish genealogy at AmericanAncesters.org</a>.</span>
                 </div>
