Updated third-party establishment image and reference

--- a/index.html
+++ b/index.html
@@ -1805,7 +1805,7 @@
             <div class="floated-box f-right">
               <a href="#" data-toggle="modal" data-target="#establishment-article-floated-bx-modal2">
                 <span class="floated-box-img thumb">
-                  <img src="https://upload.wikimedia.org/wikipedia/commons/a/ad/The_American_River_Ganges_%28Thomas_Nast_cartoon%29.jpg" alt="An Anti-Catholic Cartooon"/>
+                  <img src="images/The_American_River_Ganges_%28Thomas_Nast_cartoon%29.jpg" alt="An Anti-Catholic Cartooon"/>
                 </span>
               </a>
               <!-- Modal -->
@@ -1819,7 +1819,7 @@
                     </div>
                     <div class="modal-body">
                       <span class="floated-box-img large-img">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/a/ad/The_American_River_Ganges_%28Thomas_Nast_cartoon%29.jpg" alt="An Anti-Catholic Cartooon"/>
+                        <img src="images/The_American_River_Ganges_%28Thomas_Nast_cartoon%29.jpg" alt="An Anti-Catholic Cartooon"/>
                       </span>
                       <span class="image-caption-content t-center">A Harper's Weekly political cartoon from the 1800s shows crocodiles dressed as Catholic clergy threatening American school children.</span>
                     </div>
