Add referral button

--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
             </div>
           </div>
           <!-- END Modal -->
-          <span class="image-caption-content t-center"><p><i>Saint Brigid of Ireland</i></p>NEHGS and the Archdiocese of Boston are partnering to make Catholic records available online.<p><a href="#video" class="" title="How to browse records" name="video">How to browse records</a></p><p><a href="https://www.americanancestors.org/catholic-records-fund">Support this project</a></p></span>
+          <a href="https://www.americanancestors.org/historic-catholic-records-online">
+          <button class="slideshow-btn btn site-button"><span class="btn-value btn-value-right" style="white-space: normal;">Sign up free to see parish records</span></button></a><p><a href="#video" class="" title="How to browse records" name="video">How to browse records</a></p><p><a href="https://www.americanancestors.org/catholic-records-fund">Support this project</a></p></span>
         </div>
         <p>
           Carroll was only too happy to give Cheverus a mission:  minister to the people, unite the scattered faithful and help the church in Boston take root.
