--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             </div>
           </div>
           <!-- END Modal -->
-          <span class="image-caption-content t-center"
+          <span class="image-caption-content t-center">
           <a href="https://www.americanancestors.org/historic-catholic-records-online">
           <button class="slideshow-btn btn site-button"><span class="btn-value btn-value-right" style="white-space: normal;">Sign up free to see parish records</span></button></a><p><a href="#video" class="" title="How to browse records" name="video">How to browse records</a></p><p><a href="https://www.americanancestors.org/catholic-records-fund">Support this project</a></p></span>
         </div>
