Edit top nav menu

--- a/index.html
+++ b/index.html
@@ -78,15 +78,16 @@
             <!-- Nav List -->
             <ul class="nav uppercase normal">
               <!--<li class="dropdown-toggle nav-toggle"><a href="#" class="">Home</a></li>-->
-              <li class="dropdown-toggle nav-toggle"><a href="#introduction" class="" title ="Introduction" name="introduction">Introduction</a></li>
+              <li class="dropdown-toggle nav-toggle"><a href="#introduction" class="" title ="Introduction" name="introduction">Intro</a></li>
               <li class="dropdown-toggle nav-toggle"><a href="#catholic-bay" class="" title="Catholic in the Bay Nation" name="catholic-bay">Persecution</a></li>
               <li class="dropdown-toggle nav-toggle"><a href="#catholic-church" class="" title="Catholic Church" name="catholic-church">Timeline</a></li>
               <!-- <li class="dropdown-toggle nav-toggle"><a href="#resistance-catholicism" class="" title="Resistance to Catholism" name="resistance-catholicism">Resistance</a></li> -->
               <li class="dropdown-toggle nav-toggle"><a href="#establishment" class="" title="Establishment" name="establishment">Establishment</a></li>
               <li class="dropdown-toggle nav-toggle"><a href="#growth" class="" title="Growth" name="growth">Growth</a></li>
               <li class="dropdown-toggle nav-toggle"><a href="#legacy" class="" title="Legacy" name="legacy">Legacy</a></li>
-              <li class="dropdown-toggle nav-toggle"><a href="#video" class="" title="How to browse records" name="video">How to browse records</a></li>
-              <li class="dropdown-toggle nav-toggle"><a href="#relresources" class="" title="Related Resources" name="relresources">Related Resources</a></li>
+              <li class="dropdown-toggle nav-toggle"><a href="#video" class="" title="How to browse records" name="video">Parish Records</a></li>
+              <li class="dropdown-toggle nav-toggle"><a href="#relresources" class="" title="Related Resources" name="relresources">Resources</a></li>
+              <li class="dropdown-toggle nav-toggle"><a href="https://www.americanancestors.org/catholic-records-fund" title="Support" name="Support">Support</a></li>
               <!--<li class="dropdown-toggle nav-toggle"><a href="#resources" class="" title="Resources" name="resources">Resources</a></li>-->
             </ul>
             <!-- End Nav List -->
